# uniter

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
bin_updater/: main.cpp  upfuncs.cpp  upfuncs.h
common/: appfuncs.cpp  appfuncs.h  netfunc.cpp  netfunc.h  tcpconnector.cpp  tcpconnector.h  unetmestags.h
docs/: Documentation.md  Documentation.txt  Plan.md  UNET-MES.txt  Work plan.txt  add_data_convention.md  appmanager_routing.md  db_plan.md  documentation.md  fsm_appmanager.md  pdm_design_architecture.md  plan.md  todo_fsm_kafka_init.md
exeptions/: unacceptable.h
net/: netfunc.cpp  netfunc.h  updaterworker.cpp  updaterworker.h
odbgen/: documentation.md
skills/: SKILL-current-state.md  SKILL-target-state.md
src/common/: CMakeLists.txt  appfuncs.cpp  appfuncs.h  excepts.h
src/uniter/: CMakeLists.txt  main.cpp  sources.cmake
src/uniter/blogic/: erpmanager.h  pdmmanager.h  sources.cmake
src/uniter/builder/: appbuilder.cpp  appbuilder.h
src/uniter/compatibility/: qt_compat.h  sources.cmake
src/uniter/contract/: resourceabstract.cpp  resourceabstract.h  unitermessage.cpp  unitermessage.h  uniterprotocol.h
src/uniter/contract/design/: assembly.cpp  assembly.h  assemblyconfig.h  designtypes.h  fileversion.h  part.cpp  part.h  partconfig.h  project.cpp  project.h
src/uniter/contract/documents/: doc.cpp  doc.h  doclink.cpp  doclink.h  doctypes.h
src/uniter/contract/employee/: employee.cpp  employee.h  permissions.h
src/uniter/contract/instance/: instancebase.cpp  instancebase.h  instancecomposite.cpp  instancecomposite.h  instancesimple.cpp  instancesimple.h
src/uniter/contract/integration/: integrationtask.h  integrationtypes.h
src/uniter/contract/manager/: employee.h  integration.h  managertypes.h  permissions.h  plant.h
src/uniter/contract/material/: materialtemplatebase.cpp  materialtemplatebase.h  materialtemplatecomposite.cpp  materialtemplatecomposite.h  materialtemplatesimple.cpp  materialtemplatesimple.h  segment.h  templatebase.cpp  templatebase.h  templatecomposite.cpp  templatecomposite.h  templatesimple.cpp  templatesimple.h
src/uniter/contract/materialinstance/: materialinstancebase.cpp  materialinstancebase.h  materialinstancecomposite.cpp  materialinstancecomposite.h  materialinstancesimple.cpp  materialinstancesimple.h
src/uniter/contract/pdm/: delta.cpp  delta.h  diagnostic.h  pdmproject.h  pdmtypes.h  snapshot.cpp  snapshot.h
src/uniter/contract/plant/: plant.cpp  plant.h  task.cpp  task.h
src/uniter/contract/production/: productionstock.cpp  productionstock.h  productionsupply.h  productiontask.h  productiontypes.h
src/uniter/contract/supply/: purchase.cpp  purchase.h  purchasecomplex.cpp  purchasecomplex.h
src/uniter/contract_qt/: qt_compat.h
src/uniter/control/: appmanager.cpp  appmanager.h  configmanager.cpp  configmanager.h  sources.cmake  uiconstraints.h  uimanager.cpp  uimanager.h
src/uniter/controllers/: authcontroller.h  configcontroller.h  navigationcontroller.h  sources.cmake
src/uniter/data/: dataadapter.cpp  dataadapter.h  datamanager.cpp  datamanager.h  fileadapter.cpp  fileadapter.h  filemanager.cpp  filemanager.h  idataobserver.cpp  idataobserver.h  sources.cmake  sqlitedatabase.cpp  sqlitedatabase.h
src/uniter/database/: datamanager.cpp  datamanager.h
src/uniter/managers/: appmanager.cpp  appmanager.h  configmanager.cpp  configmanager.h  uiconstraints.h  uimanager.cpp  uimanager.h
src/uniter/messages/: internalmessage.cpp  internalmessage.h  unitermessage.cpp  unitermessage.h
src/uniter/network/: kafkaconnector.cpp  kafkaconnector.h  mainnetworker.cpp  mainnetworker.h  miniconnector.cpp  miniconnector.h  minioconnector.cpp  minioconnector.h  mocknetwork.cpp  mocknetwork.h  serverconnector.cpp  serverconnector.h  sources.cmake  tcpconnector.cpp  tcpconnector.h  unetmestags.h  updaterworker.cpp  updaterworker.h
src/uniter/resources/: resourceabstract.cpp  resourceabstract.h
src/uniter/resources/design/: assembly.cpp  assembly.h  fileversion.h  part.cpp  part.h  project.cpp  project.h
src/uniter/resources/employee/: employee.cpp  employee.h  permissions.h
src/uniter/resources/material/: materialtemplatecomposite.cpp  materialtemplatecomposite.h  materialtemplatesimple.h
src/uniter/resources/materialinstance/: materialinstancebase.cpp  materialinstancebase.h  materialinstancecomposite.cpp  materialinstancecomposite.h  materialinstancesimple.cpp  materialinstancesimple.h
src/uniter/resources/materials/: materialtemplatebase.h  materialtemplatecomposite.h  materialtemplatesimple.cpp  materialtemplatesimple.h  segment.h
src/uniter/resources/plant/: plant.cpp  plant.h  task.cpp  task.h
src/uniter/resources/purchases/: purchase.cpp  purchase.h
src/uniter/resources/supply/: purchase.cpp  purchase.h  purchasecomplex.cpp  purchasecomplex.h
src/uniter/widgets_controllers/: authcontroller.h  sources.cmake  workwdgcontroller.h
src/uniter/widgets_dynamic/: sources.cmake
src/uniter/widgets_generative/: generativetab.cpp  generativetab.h  sources.cmake  subsystemicon.cpp  subsystemicon.h  subsystemtab.cpp  subsystemtab.h
src/uniter/widgets_static/: mainwindow.cpp  mainwindow.h  sources.cmake  uisettings.cpp  uisettings.h
src/uniter/widgets_static/authwin/: authwidget.cpp  authwidget.h
src/uniter/widgets_static/offlinewin/: offlinewdg.cpp  offlinewdg.h
src/uniter/widgets_static/status/: update_indicator.h
src/uniter/widgets_static/workwin/: workwidget.cpp  workwidget.h
src/uniter/widgets_static/workwin/statusbar/: statusbar.cpp  statusbar.h
src/uniter/widgets_static/workwin/workarea/: workarea.cpp  workarea.h
src/uniter/widgets_static/workwin/workbar/: workbar.cpp  workbar.h
src/updater/: CMakeLists.txt  main.cpp  typesheader.h  upfuncs.cpp  upfuncs.h
tests/: CMakeLists.txt  appmanagertest.cpp  datamanagertest.cpp  documentsexecutortest.cpp  resourcestests.cpp  test_common.cpp  test_main.cpp
verbose/: documentation.md  sources.cmake
versions/: version.cpp  version.h
window/: mainwindow.cpp  mainwindow.h
workers/: networker.cpp  (+3 more)
(+19 files in other folders)
